--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@ button {
 <img src="jp.png" alt="jp">
 <img src="actrually.webp" alt="actrually">
 <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
+<img scr="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp alt="blob">
 
-<!-- PayPal Donate Button -->
-<form action="https://www.paypal.com/donate" method="post" target="_blank">
-  <input type="hidden" name="business" value=jxridaehler@gmail.com">
-  <input type="submit" value="Donate">
-</form>
 
 </body>
+
 </html>
