--- a/index.html
+++ b/index.html
@@ -27,9 +27,5 @@ button {
 <img src="jp.png" alt="jp">
 <img src="actrually.webp" alt="actrually">
 <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
-<img scr="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp alt="blob">
+<img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp">
 
-
-</body>
-
-</html>
