--- a/index.html
+++ b/index.html
@@ -28,4 +28,12 @@ button {
 <img src="actrually.webp" alt="actrually">
 <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
 <img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp">
+<img src="ah.jpeg">
+<img src="bomba.jpeg">
+<img src="cum.jpeg">
+<img src="huhn.jpeg">
+<img src="luxulub.jpg">
+<img src="sybau.webp">
+    
+
 
